--- a/package.json
+++ b/package.json
@@ -6,31 +6,21 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
-    "@types/axios": "^0.14.0",
-    "aphrodite": "^2.4.0",
-    "autoprefixer": "^9.8.5",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.0.5",
-    "browser-sync": "^2.26.10",
     "css-loader": "^3.6.0",
-    "del": "^4.0.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.20.3",
-    "extract-loader": "^5.1.0",
     "file-loader": "^6.0.0",
-    "jshint": "^2.11.1",
     "mini-css-extract-plugin": "^0.10.0",
     "npm-watch": "^0.6.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
     "tailwindcss": "^1.6.2",
-    "url-loader": "^1.1.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "tailwindcss build src/index.css -o tailwind.css",
     "watch": "npm-watch"
   },
   "watch": {
@@ -46,19 +36,7 @@
       ]
     }
   },
-  "dependencies": {
-    "@mdi/font": "^5.3.45",
-    "axios": "^0.19.2",
-    "core-js": "^3.6.5",
-    "hamburgers": "^1.1.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-is": "^16.13.1",
-    "roboto-fontface": "^0.10.0",
-    "slick-carousel": "^1.8.1",
-    "store": "^2.0.12",
-    "styled-components": "^5.1.1"
-  },
+  "dependencies": {},
   "sideEffects": [
     "**/*.js"
   ]
